--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -10,6 +10,10 @@ are at the top. Dates written extra large are release dates. This contains only 
   * http://code.google.com/p/v8-juice/source/list
 
 ----
+
+*2009 Nov 18*
+  * Added [PluginCurl libcurl plugin].
+
 ==2009 Nov 15==
   * It's about time for a new release.
 
