--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -10,6 +10,8 @@ are at the top. Dates written extra large are release dates. This contains only 
   * http://code.google.com/p/v8-juice/source/list
 
 ----
+*2009 Nov 21*
+  * Got function binding working for functions taking (`char const *`) arguments, with a few fairly minor limitations.
 
 *2009 Nov 18*
   * Added [PluginCurl libcurl plugin].
