--- a/wiki/PluginCurl.wiki
+++ b/wiki/PluginCurl.wiki
@@ -23,7 +23,7 @@ synchronously.
 to pass binary data around in v8 without the overhead of transporting the
 data from C++ to JS as an Array of integers, which would have a _huge_
 memory cost (somewhere around 50 times the size of the input data, i.e.
-10k of input would require roughly 500kb of memory).
+10kb of input would require roughly 500kb of memory).
 
 When a v8 string is created and it contains any "high bits" (anything
 non-ASCII), v8 assumes UC16 format and will try to convert it
@@ -47,10 +47,9 @@ loadPlugin('v8-juice-libcurl');
 
 The class can be added to a JS engine by linking in
 [http://code.google.com/p/v8-juice/source/browse/extra-plugins/src/curl the relevant code]
-into your app and calling `v8::juice::expat::CurlJS::SetupBindings()`.
+into your app and calling `v8::juice::curl::CurlJS::SetupBindings()`.
 
-Alternately, you can use `v8::juice::plugin::LoadPlugin()` to load the plugin from
-native code.
+Alternately, you can use `v8::juice::plugin::LoadPlugin()` to dynamically load the plugin from native code.
 
 = JS API =
 
@@ -291,7 +290,7 @@ guarantees that the data is valid - it might have been corrupted via
 v8's string conversion routines (or it _might_ actually be a legal v8
 string).
 
-When the `headerFunction()` is called, it is passed a single header line (a complete header entry), but that line has a trailing `\r\n` on it, which should be stripped by the caller. It is not stripped by the wrapper because doing so would cause confusion with the `length` parameter (and we do not adjust to account for the two extra stripped characters that because it would falsify any byte count calculations done by the client).
+When the `headerFunction()` is called, it is passed a single header line (a complete header entry), but that line has a trailing `\r\n` on it, which should be stripped by the caller. It is not stripped by the wrapper because doing so would cause confusion with the `length` parameter (and we do not adjust to account for the two extra stripped characters that way because it would falsify any byte count calculations done by the client).
 
 === Writing `POST` Data via Curl ===
 
@@ -330,7 +329,7 @@ for( var i = 0; i < 20000; ++i )
     content += '*';
 }
 c.setOpt({
-        url:'http://wh',
+        url:'http://localhost',
         verbose:true,
         post:true,
         httpHeader:['Content-Length: '+content.length],
