--- a/wiki/PathFinderClass.wiki
+++ b/wiki/PathFinderClass.wiki
@@ -34,13 +34,14 @@ The class can be added to a JS engine by calling `v8::juice::SetupPathFinderClas
 || `bool` || `isEmpty()` || Returns true only if this object has no path/search information. ||
 || `bool` || `isAccessible(string)` || Returns true if the given filename is accessible (readable). This is both a static and per-instance function. ||
 || *Type* || *Properties* (read-write) || *Notes* ||
-|| `Array-of-strings` || `pathArray` || See `get/setPathArray()` ||
-|| `Array-of-strings` || `extensionsArray` || See `get/setExtensionsArray()` ||
-|| `Strings` || `extensionsString` || See `get/setExtensionsString()` ||
+|| COPY OF `Array-of-strings` || `pathArray` || See `get/setPathArray()` ||
+|| COPY OF `Array-of-strings` || `extensionsArray` || See `get/setExtensionsArray()` ||
+|| `string` || `extensionsString` || See `get/setExtensionsString()` ||
 || `string` || `pathSeparator` || See `get/setPathSeparator()` ||
 || `string` || `pathString` || See `get/setPathString()` ||
 || *Type* || *Properties* (read-only) || *Notes* ||
 || `string` || `dirSeparator` (read-only) || The platform-specific character used to separate directory names in a path. This is `\` on Windows and `/` everywhere else. ||
+
 *ACHTUNG:* Note that because the values in a !PathFinder object are internally native types, it is not possible to directly change them via JS objects. e.g. `obj.pathArray.push('/home')` _will have no effect_, as the object returned from `pathArray` is necessarily a _copy_ of the native data. Thus holding references to them will not work as expected.
 
 The various properties and functions with the suffixes `Array` and `String` (e.g. `pathArray` and `pathString`) can be used like so:
@@ -55,7 +56,7 @@ obj.pathArray = ["/usr/local/bin", "/usr/bin"];
 obj.setPathArray( '/usr/local/bin', '/usr/bin' );
 }}}
 
-And setting one property will change the value of the other (but see the caveat above about not holding references to these members).
+And setting one property will change the value of the other (but see the caveat above about not being able to change these properties without the setter functions).
 
 =Shared !PathFinder Instances=
 
@@ -65,6 +66,8 @@ shared !PathFinder objects, accessible via the shared JS object
 
   * `PathFinder.shared.plugins` = the same object as `v8::juice::plugin::PluginsPath()`.
   * `PathFinder.shared.include` = the same object as `v8::juice::ScriptsPath()`.
+
+In both cases, JS and native code refer to the same underlying shared instances. Thus changes made to the object via the native or JS APIs will affect both native and JS-side usage of those object.
 
 =Examples=
 
