--- a/wiki/PluginExpatParser.wiki
+++ b/wiki/PluginExpatParser.wiki
@@ -17,7 +17,7 @@ of input stream, nor does it require buffering the entire input before parsing.
 This XML parser is event-driven. It reads XML input incrementally and calls
 client-specified callbacks when it encounters various parts of the XML tree.
 This approach makes it relatively simple to create language-specific object trees
-from XML input.
+from XML input. However, compared to "pull parsers", it is (IMO) less convenient when it comes to fishing out specific data from XML input. Pull-parsers require several higher-level abstractions which the event-drive approach does not require (e.g. an input source interface and a DOM API).
 
 == Loading from JS ==
 
